[gd_scene load_steps=3 format=3 uid="uid://d4lkv35ituqh6"]

[ext_resource type="Script" path="res://Assets/scripts/movable_object.gd" id="1_saae2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x8r06"]
size = Vector2(98, 139)

[node name="MovableObject" type="Node2D"]
script = ExtResource("1_saae2")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, -2.5)
shape = SubResource("RectangleShape2D_x8r06")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
